<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C8C8C8">

        <LinearLayout
            android:id="@+id/homeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#111111"
            android:padding="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/des"
                app:srcCompat="@drawable/audit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuCard"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeHeader">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cvBalance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/des"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/balance" />

                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/amount"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu1Card"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuCard">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSavings"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivSavings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/savings" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRent"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/rent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBills"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivBills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/bills" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu2Card"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu1Card">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvInvestments"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivInvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/invest" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEmergency"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivInsurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/emergency" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEnjoyment"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivEnjoyment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/des"
                    android:padding="5dp"
                    app:srcCompat="@drawable/vacation" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu3Card"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu2Card">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvIncome"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/des"
                    app:srcCompat="@drawable/money_in" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvExpense"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/des"
                    app:srcCompat="@drawable/money_out" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLTitles"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/menuCard">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/balance"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLTitles1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/menu1Card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvSavings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/savings"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvRent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/rent"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvBills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/bills"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLTitles2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/menu2Card">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvInvestment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/investments"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvInsurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/insurance"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvEnjoyment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/enjoyment"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLTitles3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/menu3Card">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/income"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/tvExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/expense"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
